--- a/templates/response.html
+++ b/templates/response.html
@@ -6,7 +6,7 @@
         <!-- Widget: user widget style 1 -->
         <div class="box box-widget widget-user-2">
           <!-- Add the bg color to the header using any of the bg-* classes -->
-          <div class="widget-user-header bg-yellow">
+          <div class="widget-user-header bg-purple">
             <div class="widget-user-image">
               <img class="img-circle" src="{{ url_for('static', filename='img/user7-128x128.jpg') }}" alt="User Avatar">
             </div>
