--- a/templates/service.html
+++ b/templates/service.html
@@ -63,7 +63,7 @@
                                               <input type="hidden" name="org" value={{ org_name }} >
                                               <input type="hidden" name="service" value={{ service_name }} >
                                               <input type="hidden" name="method" value={{ v2 }} >
-                                              <input type="submit" value="Submit" />
+                                              <input type="submit" value="Select" />
                                           </form>
                                         {% endif %}
                                     {% endfor %}
