--- a/templates/response.html
+++ b/templates/response.html
@@ -24,7 +24,14 @@
                  </tr>
               {% endfor %}
               </table>
-                <h1>{{service_response}}</h1>
+              <table>
+              {% for key, value in service_response.items() %}
+                 <tr>
+                      <th> {{ key }} </th>
+                      <td> {{ value }} </td>
+                 </tr>
+              {% endfor %}
+              </table>
             </ul>
           </div>
         </div>
