--- a/templates/selected_service.html
+++ b/templates/selected_service.html
@@ -29,6 +29,7 @@
                     </tr>
                     {% endfor %}
                 </table>
+                <input type="hidden" name="agent_address" id="agent_address" value={{ agent_address }} >
                 <input type="hidden" name="org" value={{ org_name }} >
                 <input type="hidden" name="service" value={{ service_name }} >
                 <p><input type="submit" value="Create Job" /></p>
