--- a/templates/approveTokens.html
+++ b/templates/approveTokens.html
@@ -32,6 +32,7 @@
                 <input type="hidden" name="agent_address" id="agent_address" value={{ agent_address }} >
                 <input type="hidden" name="org" value={{ org_name }} >
                 <input type="hidden" name="service" value={{ service_name }} >
+                <br><br>
                 <p><input type="submit" value="FundJob" id="fundJob" /></p>
             </form>
           </ul>
@@ -39,7 +40,7 @@
       </div>
     </div>
 </div>
-<li><a href="/">Voltar</a></li>
+<li><a href="/">Back</a></li>
 
 <div class="row">
     <div class="col-lg-12">
@@ -82,7 +83,7 @@
     </div>
 </div>
 
-<li><a href="/">Voltar</a></li>
+<li><a href="/">Back</a></li>
 {% endblock %}
 
 {% block scripts %}
