--- a/templates/index.html
+++ b/templates/index.html
@@ -49,8 +49,11 @@
                       {% for services in org_info %}
                         {% set service_name = services[0] %}
                         {% set addr = services[1] %}
-                        {% set ep = services[2] %}
-                        <li><a href="service?org={{org_name}}&service={{service_name}}"><strong>{{ service_name }}</strong> ({{ep}}, {{addr}})</a></li>
+                        {% set price = services[2] %}
+                        {% set ep = services[3] %}
+                        <li><a href="service?org={{org_name}}&service={{service_name}}"><strong>{{ service_name }}</strong>
+                            (AGI: {{price}}, {{ep}}, {{addr}})</a>
+                        </li>
                       {% endfor %}
                     </ul>
                   </div>
