--- a/templates/layout.html
+++ b/templates/layout.html
@@ -193,7 +193,7 @@
                         <div class="small-box bg-purple">
                             <div class="inner" id="wallet">
                                 Wallet:
-                                <span id="user_address" value="">MetaMask is not enabled!</span>
+                                <span id="user_account" value="{{user_account}}">{{user_account}}</span>
                                 <br>ETH: <span id="eth_balance">0</span>
                                 <br>AGI: <span id="agi_balance">0</span>
                             </div>
