--- a/templates/callService.html
+++ b/templates/callService.html
@@ -32,7 +32,7 @@
                 <input type="hidden" name="agent_address" id="agent_address" value={{ agent_address }} >
                 <input type="hidden" name="org" value={{ org_name }} >
                 <input type="hidden" name="service" value={{ service_name }} >
-                <button type="submit" class="btn btn-primary" id="getResponse">GetResponse</button>
+                <button type="submit" class="btn btn-primary" id="getResponse" disabled>Please, wait...</button>
             </form>
             <br>
           </ul>
