--- a/templates/layout.html
+++ b/templates/layout.html
@@ -149,24 +149,12 @@
               <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
           </div>
-          <!-- search form -->
-          <form action="#" method="get" class="sidebar-form">
-            <div class="input-group">
-              <input type="text" name="q" class="form-control" placeholder="Search...">
-              <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                </button>
-              </span>
-            </div>
-          </form>
-          <!-- /.search form -->
-          <!-- sidebar menu: : style can be found in sidebar.less -->
-          <form action="wallet.html" method="POST" class="sidebar-form">
+          <form action="wallet" method="POST" class="sidebar-form">
             <div class="input-group">
               <input type="text" name="mnemonic" class="form-control" placeholder="Generate Wallet...">
               <input type="hidden" name="index" value="0">
               <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
+                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-usd"></i>
                 </button>
               </span>
             </div>
